# rebot_arm_webui

./: .gitignore  LICENSE  README.md  app.js  index.html  kinematics_server.py  package-lock.json  package.json  pyproject.toml  styles.css  vite.config.js
assets/urdf/reBot-DevArm-rs_asm-v3/urdf/: 00-arm-rs_asm-v3.urdf
public/assets/urdf/reBot-DevArm-rs_asm-v3/urdf/: 00-arm-rs_asm-v3.urdf
scripts/: bootstrap.sh  install-csg-design-system.sh  install.sh  setup-systemd.sh  start.sh  verify-ik-click.mjs  verify-initial-zero.mjs  verify-render.mjs  verify-wrist-fk.mjs
