[project]
name = "rebot-arm-webui"
version = "0.2.1"
description = "Integrated WebUI and local control backend for reBot Arm."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.0",
    "pin>=3.9.0",
    "pyyaml>=6.0",
    "motorbridge>=0.1.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
